{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 162,
  "lineage": "89313753-8e04-5ead-ca14-4d1a2ae6a9cf",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:security-group/sg-0fd4fce2600c98516",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0fd4fce2600c98516",
            "ingress": [],
            "name": "myapp-eks-cluster20211011132511358700000007",
            "name_prefix": "myapp-eks-cluster",
            "owner_id": "770775386994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-eks_cluster_sg",
              "application": "myapp",
              "environment": "development"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-eks_cluster_sg",
              "application": "myapp",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0882045f3949531db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:security-group/sg-083c45e9641c6fd64",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-083c45e9641c6fd64",
            "ingress": [],
            "name": "myapp-eks-cluster20211011132511984100000008",
            "name_prefix": "myapp-eks-cluster",
            "owner_id": "770775386994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-eks_worker_sg",
              "application": "myapp",
              "environment": "development",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-eks_worker_sg",
              "application": "myapp",
              "environment": "development",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0882045f3949531db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-484976719",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fd4fce2600c98516",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2979481582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd4fce2600c98516",
            "self": false,
            "source_security_group_id": "sg-083c45e9641c6fd64",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3170554776",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-083c45e9641c6fd64",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3772565837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-083c45e9641c6fd64",
            "self": false,
            "source_security_group_id": "sg-0fd4fce2600c98516",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-889919142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-083c45e9641c6fd64",
            "self": false,
            "source_security_group_id": "sg-0fd4fce2600c98516",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1320942832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-083c45e9641c6fd64",
            "self": false,
            "source_security_group_id": "sg-083c45e9641c6fd64",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-061c70c7f9f42a38b",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-216-131-224.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.131.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myapp-vpc-eu-west-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:internet-gateway/igw-03cf49ec6a58d1557",
            "id": "igw-03cf49ec6a58d1557",
            "owner_id": "770775386994",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0882045f3949531db"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061c70c7f9f42a38b",
            "connectivity_type": "public",
            "id": "nat-0b7490a3efdfa6b32",
            "network_interface_id": "eni-06f5f009c34266623",
            "private_ip": "10.0.4.138",
            "public_ip": "54.216.131.224",
            "subnet_id": "subnet-08dae2313f0421b3f",
            "tags": {
              "Name": "myapp-vpc-eu-west-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af7a4b44485555c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b7490a3efdfa6b32",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af7a4b44485555c3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_nat_gateway.this",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03cf49ec6a58d1557",
            "id": "r-rtb-033b4821ce039d0521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033b4821ce039d052",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:route-table/rtb-0af7a4b44485555c3",
            "id": "rtb-0af7a4b44485555c3",
            "owner_id": "770775386994",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myapp-vpc-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0882045f3949531db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:route-table/rtb-033b4821ce039d052",
            "id": "rtb-033b4821ce039d052",
            "owner_id": "770775386994",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0882045f3949531db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0574a3acac3eaf480",
            "route_table_id": "rtb-0af7a4b44485555c3",
            "subnet_id": "subnet-0213ddad732dd068a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08dcdb62639b80e6b",
            "route_table_id": "rtb-0af7a4b44485555c3",
            "subnet_id": "subnet-0c5596eedea788620"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf584e01c9c2da49",
            "route_table_id": "rtb-0af7a4b44485555c3",
            "subnet_id": "subnet-027d660d46422743e"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014755f0ef9d9acb8",
            "route_table_id": "rtb-033b4821ce039d052",
            "subnet_id": "subnet-08dae2313f0421b3f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cde2862ab4ef2620",
            "route_table_id": "rtb-033b4821ce039d052",
            "subnet_id": "subnet-03b69b77ee4e0ff45"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1fc6650d4100538",
            "route_table_id": "rtb-033b4821ce039d052",
            "subnet_id": "subnet-07fecf6ff3da6ebdf"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-0213ddad732dd068a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0213ddad732dd068a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770775386994",
            "tags": {
              "Name": "myapp-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0882045f3949531db"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-0c5596eedea788620",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c5596eedea788620",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770775386994",
            "tags": {
              "Name": "myapp-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0882045f3949531db"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-027d660d46422743e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-027d660d46422743e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770775386994",
            "tags": {
              "Name": "myapp-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0882045f3949531db"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-08dae2313f0421b3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-08dae2313f0421b3f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770775386994",
            "tags": {
              "Name": "myapp-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0882045f3949531db"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-03b69b77ee4e0ff45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-03b69b77ee4e0ff45",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770775386994",
            "tags": {
              "Name": "myapp-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0882045f3949531db"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-07fecf6ff3da6ebdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-07fecf6ff3da6ebdf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770775386994",
            "tags": {
              "Name": "myapp-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0882045f3949531db"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:vpc/vpc-0882045f3949531db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e6e6b363fe874dde",
            "default_route_table_id": "rtb-079307cefbe914a27",
            "default_security_group_id": "sg-0cad72827dd558acc",
            "dhcp_options_id": "dopt-e4502882",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0882045f3949531db",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-079307cefbe914a27",
            "owner_id": "770775386994",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}